--- a/index.html
+++ b/index.html
@@ -9,19 +9,28 @@
 <title>Convite Raul 10 anos</title>
 
 <style>
+<body>
+<div class="container">
 body{
 margin:0;
-background:#0d1b2a;
+background:#000;
 display:flex;
 justify-content:center;
 align-items:center;
 height:100vh;
-overflow:hidden;
-font-family:'Baloo 2', cursive;
-color:white;
-text-align:center;
 }
-
+.container{
+position:relative;
+width:100%;
+max-width:420px;
+aspect-ratio:9/16;
+background:#0d1b2a;
+overflow:hidden;
+border-radius:25px;
+}
+</div>
+</body>
+   
 /* Tela inicial */
 #startScreen{
 position:absolute;
