--- a/presentes.html
+++ b/presentes.html
@@ -69,7 +69,7 @@ cursor:pointer;
 Copiar chave Pix
 </button>
 
-<button class="voltar" onclick="window.location.href='index.html'">
+<button class="voltar" onclick="window.location.href='index.html#frame'">
 Voltar
 </button>
 
