--- a/index.html
+++ b/index.html
@@ -1,196 +1,202 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&family=Baloo+2:wght@400;600&display=swap" rel="stylesheet">
-
 <title>Convite Raul 10 anos</title>
-
 <style>
-<body>
-<div class="container">
+/* Layout Story 9:16 */
 body{
-margin:0;
-background:#000;
-display:flex;
-justify-content:center;
-align-items:center;
-height:100vh;
+  margin:0;
+  background:#000;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  height:100vh;
+  font-family:'Arial', sans-serif;
+  overflow:hidden;
 }
+
 .container{
-position:relative;
-width:100%;
-max-width:420px;
-aspect-ratio:9/16;
-background:#0d1b2a;
-overflow:hidden;
-border-radius:25px;
-}
-</div>
-</body>
-   
-/* Tela inicial */
-#startScreen{
-position:absolute;
-width:100%;
-height:100%;
-background:url('envelope.png') center/contain no-repeat;
-display:flex;
-justify-content:center;
-align-items:center;
-cursor:pointer;
+  position:relative;
+  width:100%;
+  max-width:420px;
+  aspect-ratio:9/16;
+  background:#0d1b2a;
+  overflow:hidden;
+  border-radius:25px;
 }
 
-.tapText{
-position:absolute;
-bottom:80px;
-font-family:'Luckiest Guy', cursive;
-font-size:28px;
-color:white;
-animation:blink 1.2s infinite;
-text-shadow:0 0 15px #00f7ff;
+/* Vídeo do convite */
+#conviteVideo{
+  width:100%;
+  height:100%;
+  object-fit:cover;
 }
 
-@keyframes blink{
-0%{opacity:1;}
-50%{opacity:0.2;}
-100%{opacity:1;}
+/* Moldura */
+#molduraImg{
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  object-fit:contain;
+  pointer-events:none;
 }
 
-/* Sticker Som */
-#soundSticker{
-position:absolute;
-bottom:20px;
-right:20px;
-background:rgba(255,255,255,0.2);
-padding:10px 15px;
-border-radius:30px;
-font-size:14px;
-animation:pulse 1.5s infinite;
+/* Purpurina/partículas */
+.particles{
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  pointer-events:none;
+  overflow:hidden;
 }
 
-@keyframes pulse{
-0%{transform:scale(1);}
-50%{transform:scale(1.1);}
-100%{transform:scale(1);}
-}
-
-video{
-width:100%;
-height:100%;
-object-fit:cover;
-display:none;
-}
-
-/* Moldura final */
+/* Frame final com dados e botões */
 #frame{
-position:absolute;
-display:none;
-flex-direction:column;
-justify-content:center;
-align-items:center;
-width:90%;
-max-width:500px;
-background:url('moldura01.jpg') center/contain no-repeat;
-background-size:contain;
-padding:60px 20px;
-animation:stomp 0.6s ease-out;
+  position:absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  text-align:center;
+  color:white;
+  opacity:0;
+  transition:opacity 1.5s ease;
 }
 
-@keyframes stomp{
-0%{transform:scale(0.2) rotate(-10deg);opacity:0;}
-70%{transform:scale(1.1);}
-100%{transform:scale(1);opacity:1;}
+/* Título e info */
+#frame h1{
+  font-size:32px;
+  text-shadow: 0 0 10px #00f7ff;
+  margin:0;
+}
+#frame p{
+  font-size:18px;
+  margin:10px 0;
+  text-shadow: 0 0 8px #00f7ff;
 }
 
-h1{
-font-family:'Luckiest Guy', cursive;
-font-size:42px;
-margin:10px 0;
-}
-
-.info{
-font-size:18px;
-margin-bottom:20px;
-}
-
+/* Botões cinematográficos */
 button{
-margin:8px;
-padding:12px 20px;
-border-radius:30px;
-border:none;
-background:#3ec1d3;
-color:white;
-font-size:16px;
-cursor:pointer;
-transition:0.3s;
+  margin:10px;
+  padding:14px 22px;
+  border-radius:50px;
+  border:none;
+  background:linear-gradient(135deg,#ff6aff,#ff00ff);
+  color:white;
+  font-size:16px;
+  cursor:pointer;
+  transition:0.3s;
+  box-shadow:0 0 20px rgba(255,0,255,0.7);
 }
-
 button:hover{
-transform:scale(1.1);
-background:#00b4d8;
+  transform:scale(1.1);
+  box-shadow:0 0 35px rgba(255,0,255,1);
 }
 
 .obs{
-margin-top:15px;
-font-size:14px;
-opacity:0.8;
+  font-size:14px;
+  margin-top:10px;
+  color:#f0f0f0;
+  text-shadow:0 0 5px #fff;
 }
+
+/* Pequena animação de brilho dos botões */
+@keyframes glow{
+  0% { box-shadow:0 0 20px rgba(255,0,255,0.7); }
+  50% { box-shadow:0 0 35px rgba(255,0,255,1); }
+  100% { box-shadow:0 0 20px rgba(255,0,255,0.7); }
+}
+button{
+  animation: glow 2s infinite;
+}
+
 </style>
 </head>
-
 <body>
 
-<div id="startScreen" onclick="startVideo()">
-   <div class="tapText">Toque para abrir</div>
-</div>
+<div class="container">
 
-<div id="soundSticker">🔊 Aumente o som</div>
+  <!-- Vídeo do convite -->
+  <video id="conviteVideo" autoplay muted playsinline>
+    <source src="./video.mp4" type="video/mp4">
+  </video>
 
-<video id="conviteVideo" src="video.mp4"></video>
+  <!-- Moldura animada -->
+  <img src="./moldura.png" id="molduraImg">
 
-<div id="frame">
-<h1>Raul</h1>
+  <!-- Purpurina/partículas -->
+  <canvas class="particles" id="particles"></canvas>
 
-<div class="info">
-10 anos<br>
-07 de março de 2026<br>
-às 15 horas
-</div>
+  <!-- Frame final -->
+  <div id="frame">
+    <h1>Raul</h1>
+    <p>10 anos<br>07 de março de 2026<br>às 15 horas</p>
+    <button onclick="abrirMapa()">📍 Localização</button>
+    <button onclick="confirmar()">🎉 Confirmar Presença</button>
+    <button onclick="window.location.href='presentes.html'">🎁 Sugestão de Presentes</button>
+    <div class="obs">churrasco comunitário</div>
+  </div>
 
-<button onclick="abrirMapa()">📍 Localização</button>
-
-<button onclick="confirmar()">🎉 Confirmar Presença</button>
-
-<button onclick="window.location.href='presentes.html'">
-🎁 Sugestão de Presentes
-</button>
-
-<div class="obs">churrasco comunitário</div>
 </div>
 
 <script>
-function startVideo(){
-document.getElementById("startScreen").style.display="none";
-document.getElementById("conviteVideo").style.display="block";
-document.getElementById("conviteVideo").play();
+// Mostra o frame quando o vídeo termina
+const video = document.getElementById('conviteVideo');
+const frame = document.getElementById('frame');
+video.onended = () => {
+  frame.classList.add('show');
 }
 
-document.getElementById("conviteVideo").addEventListener("ended",function(){
-this.style.display="none";
-document.getElementById("frame").style.display="flex";
-});
-
-/* EDITAR AQUI */
+// Funções dos botões
 function abrirMapa(){
-window.open("https://maps.app.goo.gl/8PKVQXYy6UK7sbPAA");
+  window.open('https://maps.app.goo.gl/8PKVQXYy6UK7sbPAA', '_blank');
+}
+function confirmar(){
+  window.open('hhttps://wa.link/qhpf5s', '_blank');
 }
 
-function confirmar(){
-window.open("https://wa.link/qhpf5s");
+// Partículas simples de purpurina
+const canvas = document.getElementById('particles');
+const ctx = canvas.getContext('2d');
+canvas.width = canvas.offsetWidth;
+canvas.height = canvas.offsetHeight;
+
+const particles = [];
+for(let i=0;i<150;i++){
+  particles.push({
+    x: Math.random()*canvas.width,
+    y: Math.random()*canvas.height,
+    r: Math.random()*3+1,
+    dx: (Math.random()-0.5)*2,
+    dy: (Math.random()-0.5)*2
+  });
 }
+
+function animate(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  particles.forEach(p=>{
+    ctx.beginPath();
+    ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
+    ctx.fillStyle = 'rgba(255,255,255,0.8)';
+    ctx.fill();
+    p.x += p.dx;
+    p.y += p.dy;
+    if(p.x<0||p.x>canvas.width)p.dx*=-1;
+    if(p.y<0||p.y>canvas.height)p.dy*=-1;
+  });
+  requestAnimationFrame(animate);
+}
+animate();
 </script>
 
 </body>
