--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ button{
   </video>
 
   <!-- Moldura animada -->
-  <img src="./moldura.png" id="molduraImg">
+  <img src="./moldura01.jpg" id="molduraImg">
 
   <!-- Purpurina/partículas -->
   <canvas class="particles" id="particles"></canvas>
