--- a/index.html
+++ b/index.html
@@ -27,7 +27,18 @@ body{
   border-radius:25px;
 }
 
-/* Vídeo do convite */
+  /* Imagem do envelope (início do convite) */
+#envelopeImg{
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  width:60%;
+  pointer-events:none;
+  z-index:2;
+}
+
+  /* Vídeo do convite */
 #conviteVideo{
   width:100%;
   height:100%;
@@ -131,6 +142,8 @@ button{
     <source src="./video.mp4" type="video/mp4">
   </video>
 
+  <img src="./envelope.png" id="envelopeImg">
+  
   <!-- Moldura animada -->
   <img src="./moldura01.jpg" id="molduraImg">
 
