--- a/index.html
+++ b/index.html
@@ -147,14 +147,14 @@
         <video id="videoIntro" src="video.mp4" playsinline></video>
 
         <div id="screenConvite">
-            <video id="videoMoldura" src="video_moldura.mp4" loop muted playsinline style="display:block"></video>
+            <video id="videoMoldura" src="videomoldura.mp4" loop muted playsinline style="display:block"></video>
             <button class="btn-invisible pos-confirmar" onclick="confirmar()"></button>
             <button class="btn-invisible pos-mapa" onclick="abrirMapa()"></button>
             <button class="btn-invisible pos-presentes" onclick="mostrarPresentes()"></button>
         </div>
 
         <div id="screenPresentes">
-            <video id="videoPresentes" src="video_presentes.mp4" loop muted playsinline style="display:block"></video>
+            <video id="videoPresentes" src="videopresentes.mp4" loop muted playsinline style="display:block"></video>
             <button class="btn-invisible pos-pix" onclick="copiarPix()"></button>
             <button class="btn-invisible pos-voltar" onclick="voltar()"></button>
         </div>
